Bug 1560587 - Remove incorrect event redirection. r=tnikkel, a=jcristau

In this codepath, the parent process may be sending an event to a particular
content process. The last-saved mouse target might be stale, and using that
to redirect the event can result in the event getting sent to the wront content
process. Deleting this erroneous change restores correct behaviour.

Differential Revision: https://phabricator.services.mozilla.com/D35697

--HG--
extra : rebase_source : 0687d0472a6495a8f7c4fce688106a277588de08
extra : source : 92a3a2e17fdb8b252e73d989cbb2dde0590e8813